Fix: fixed issue with notify.js where the colour was red when user successfully registered should be green
fixed issue with notification in css font was overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ ul {
     display: flex;
     width: 60%;
     max-height: fit-content;
-    height: 100px;
+    min-height: 100px;
     padding: 5px;
     flex-direction: column;
     justify-content: center;
